lib/02core/ringbuffer_no_alloc/ringbuffer_noalloc.h

typedef struct RbNoAlloc {
	u8 *buf;	/* 调用方提供的存储，init 后由 rb 接管 */
	usize elem_size; /* 单个元素字节数，init 时传入 sizeof(T) 记录 */
	usize cap;	/* 元素容量 = buf_size / elem_size */
	usize head;	/* 下一次写入的元素下标 */
	usize len;	/* 当前元素个数 */
} RbNoAlloc;
/* buf 至少 buf_size 字节；elem_size 为 0 或放不下一个元素时 cap 为 0。 */
void rb_noalloc_init(RbNoAlloc *rb, void *buf, usize buf_size, usize elem_size);
/* 满时覆盖最旧元素；cap 为 0 时丢弃写入。 */
void rb_noalloc_push(RbNoAlloc *rb, const void *elem);
/* 取出最旧元素；空时返回 false，out 不被修改。 */
bool rb_noalloc_pop(RbNoAlloc *rb, void *out);
/* 空时返回 NULL。 */
const void *rb_noalloc_front(const RbNoAlloc *rb);
const void *rb_noalloc_back(const RbNoAlloc *rb);
usize rb_noalloc_len(const RbNoAlloc *rb);
usize rb_noalloc_capacity(const RbNoAlloc *rb);
bool rb_noalloc_is_empty(const RbNoAlloc *rb);
bool rb_noalloc_is_full(const RbNoAlloc *rb);
void rb_noalloc_clear(RbNoAlloc *rb);