lib/02core/ringbuffer_no_alloc/lib.rs

//generated by kimi-k3<noreply@moonshot.cn> @ kimi-code
//ringbuffer_no_alloc 的 Rust 最小包装：裸指针接管外部存储，元素一律要求 Copy

#![no_std]

use core::ffi::c_void;
use core::marker::PhantomData;
use core::mem::{size_of, MaybeUninit};
use core::ptr;

#[repr(C)]
pub struct RawRbNoAlloc {
    pub buf: *mut u8,
    pub elem_size: usize,
    pub cap: usize,
    pub head: usize,
    pub len: usize,
}

unsafe extern "C" {
    #[link_name = "rb_noalloc_init"]
    fn c_rb_noalloc_init(
        rb: *mut RawRbNoAlloc,
        buf: *mut c_void,
        buf_size: usize,
        elem_size: usize,
    );
    #[link_name = "rb_noalloc_push"]
    fn c_rb_noalloc_push(rb: *mut RawRbNoAlloc, elem: *const c_void);
    #[link_name = "rb_noalloc_pop"]
    fn c_rb_noalloc_pop(rb: *mut RawRbNoAlloc, out: *mut c_void) -> bool;
    #[link_name = "rb_noalloc_front"]
    fn c_rb_noalloc_front(rb: *const RawRbNoAlloc) -> *const c_void;
    #[link_name = "rb_noalloc_back"]
    fn c_rb_noalloc_back(rb: *const RawRbNoAlloc) -> *const c_void;
    #[link_name = "rb_noalloc_len"]
    fn c_rb_noalloc_len(rb: *const RawRbNoAlloc) -> usize;
    #[link_name = "rb_noalloc_capacity"]
    fn c_rb_noalloc_capacity(rb: *const RawRbNoAlloc) -> usize;
    #[link_name = "rb_noalloc_is_empty"]
    fn c_rb_noalloc_is_empty(rb: *const RawRbNoAlloc) -> bool;
    #[link_name = "rb_noalloc_is_full"]
    fn c_rb_noalloc_is_full(rb: *const RawRbNoAlloc) -> bool;
    #[link_name = "rb_noalloc_clear"]
    fn c_rb_noalloc_clear(rb: *mut RawRbNoAlloc);
}

/// 外置存储环形缓冲区。存储由调用方持有，本结构只接管不拥有；
/// 元素按字节处理，因此 `T` 必须是 `Copy`。
#[repr(transparent)]
pub struct RingBufferNoAlloc<T: Copy> {
    raw: RawRbNoAlloc,
    _marker: PhantomData<T>,
}

impl<T: Copy> RingBufferNoAlloc<T> {
    /// 接管 `[buf, buf + buf_size)` 作为存储。
    /// 调用方必须保证该内存在本结构使用期间有效且独占。
    pub unsafe fn from_raw_parts(buf: *mut u8, buf_size: usize) -> Self {
        let mut raw = RawRbNoAlloc {
            buf: ptr::null_mut(),
            elem_size: 0,
            cap: 0,
            head: 0,
            len: 0,
        };
        unsafe { c_rb_noalloc_init(&mut raw, buf.cast(), buf_size, size_of::<T>()) };
        Self {
            raw,
            _marker: PhantomData,
        }
    }

    /// 满时覆盖最旧元素。
    pub fn push(&mut self, value: T) {
        unsafe { c_rb_noalloc_push(&mut self.raw, (&value as *const T).cast()) };
    }

    /// 取出最旧元素；空时返回 `None`。
    pub fn pop(&mut self) -> Option<T> {
        let mut out = MaybeUninit::<T>::uninit();
        if unsafe { c_rb_noalloc_pop(&mut self.raw, out.as_mut_ptr().cast()) } {
            Some(unsafe { out.assume_init() })
        } else {
            None
        }
    }

    pub fn front(&self) -> Option<T> {
        let ptr = unsafe { c_rb_noalloc_front(&self.raw) };
        if ptr.is_null() {
            None
        } else {
            Some(unsafe { ptr::read_unaligned(ptr.cast::<T>()) })
        }
    }

    pub fn back(&self) -> Option<T> {
        let ptr = unsafe { c_rb_noalloc_back(&self.raw) };
        if ptr.is_null() {
            None
        } else {
            Some(unsafe { ptr::read_unaligned(ptr.cast::<T>()) })
        }
    }

    pub fn len(&self) -> usize {
        unsafe { c_rb_noalloc_len(&self.raw) }
    }

    pub fn capacity(&self) -> usize {
        unsafe { c_rb_noalloc_capacity(&self.raw) }
    }

    pub fn is_empty(&self) -> bool {
        unsafe { c_rb_noalloc_is_empty(&self.raw) }
    }

    pub fn is_full(&self) -> bool {
        unsafe { c_rb_noalloc_is_full(&self.raw) }
    }

    pub fn clear(&mut self) {
        unsafe { c_rb_noalloc_clear(&mut self.raw) };
    }
}
